--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,9 @@
 html {
   font-size: 62.5%;
   min-height: 100%;
+  background: $main-bg;
+  font-family: $default-font;
+  color: $white;
 }
 
 // Remove subpixels from webkit browsers and FF
@@ -44,8 +47,15 @@ button,
   border: 0;
 }
 
+h1 {
+  font-size: 72px;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
 // Import modules
-@import 'modules/interface-ctrl';
+@import 'modules/interface-ctrl', 'modules/footer';
 
 // Import elements
 @import 'elements/forms';
