--- a/scss/modules/_interface-ctrl.scss
+++ b/scss/modules/_interface-ctrl.scss
@@ -1,4 +1,107 @@
+.capitalize {
+  text-transform: uppercase;
+}
+
+.bold {
+  font-weight: 700;
+}
+
 .main {
-  width: 600px;
-  margin: 200px auto 0;
+  width: 900px;
+  margin: 50px auto 0;
+  padding: 40px;
+}
+
+.coordinates-wrapper {
+  width: 170px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+}
+
+.coordinates {
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 40px;
+
+  &:first-child {
+    margin-left: 0;
+  }
+
+  .position {
+    font-size: 20px;
+    text-transform: uppercase;
+    margin-right: 10px;
+  }
+
+  .value {
+    font-weight: 300;
+    font-size: 60px;
+  }
+}
+
+.compass {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  margin-right: auto;
+  margin-left: auto;
+  border-radius: 50%;
+  border: 1px dashed $white;
+
+  .direction {
+    position: absolute;
+  }
+
+  // North
+  .north {
+    left: 95px;
+    top: 20px;
+  }
+  // South
+  .south {
+    left: 95px;
+    bottom: 20px;
+  }
+  // East
+  .east {
+    right: 25px;
+    top: 90px;
+  }
+  // West
+  .west {
+    left: 25px;
+    top: 90px;
+  }
+
+  .pointer {
+    background: url('../graphics/needle.svg') no-repeat center;
+    width: 60px;
+    height: 40px;
+    background-size: 15px 40px;
+    /* Centering it */
+    position: relative;
+    left: 50%;
+    top: 50%;
+    margin-left: -30px;
+    margin-top: -40px;
+    transform-origin: bottom center;
+    @include cubic(0.2s);
+
+    &.direction-1 {
+      transform: rotate(0deg);
+    }
+
+    &.direction-2 {
+      transform: rotate(90deg);
+    }
+
+    &.direction-3 {
+      transform: rotate(180deg);
+    }
+
+    &.direction-4 {
+      transform: rotate(270deg);
+    }
+  }
 }
